polish: Sea Slug (#2725)
* modernize

* fix sea slug xp reward

* test: opt into sidebar test

* fix: quest start dialog highlight

* fix: missing sidebar step

* chore: highlight dry sticks in inventory

* add missing item reward

wow oyster pearls!